5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4429/executions/1716_2495.log
== TEST (2019-05-07 16:33:37) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num!=-1):
	# Verifica se valor eh divisivel por 2
	if (num/2):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
IMPAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:34:54) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num!=-1):
	# Verifica se valor eh divisivel por 2
	if (num/2):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
IMPAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:37:51) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num=!-1):
	# Verifica se valor eh divisivel por 2
	if (num/2):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 9
    while (num=!-1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:38:11) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num!=-1):
	# Verifica se valor eh divisivel por 2
	if (num/2):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
IMPAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:38:40) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num!=-1):
	# Verifica se valor eh divisivel por 2
	if (num/2):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
IMPAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 16:40:31) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num!=-1):
	# Verifica se valor eh divisivel por 2
	if (num/2):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- EXECUTION TIME:
0.149463
-- TEST CASE 1:
---- input:
0
22
44
-1
---- correct output:
PAR
PAR
PAR
---- user output:
IMPAR
PAR
PAR
-- TEST CASE 2:
---- input:
1
33
55
777
9999
-1
---- correct output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
---- user output:
PAR
PAR
PAR
PAR
PAR
-- TEST CASE 3:
---- input:
10528
4999
123
45
6
-1
---- correct output:
PAR
IMPAR
IMPAR
IMPAR
PAR
---- user output:
PAR
PAR
PAR
PAR
PAR
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 09:39:41) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num!=-1):
	# Verifica se valor eh divisivel por 2
	if (num%2):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- EXECUTION TIME:
0.180633
-- TEST CASE 1:
---- input:
0
22
44
-1
---- correct output:
PAR
PAR
PAR
---- user output:
IMPAR
IMPAR
IMPAR
-- TEST CASE 2:
---- input:
1
33
55
777
9999
-1
---- correct output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
---- user output:
PAR
PAR
PAR
PAR
PAR
-- TEST CASE 3:
---- input:
10528
4999
123
45
6
-1
---- correct output:
PAR
IMPAR
IMPAR
IMPAR
PAR
---- user output:
IMPAR
PAR
PAR
PAR
IMPAR
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 09:39:55) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num!=-1):
	# Verifica se valor eh divisivel por 2
	if (num%2):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- EXECUTION TIME:
0.173516
-- TEST CASE 1:
---- input:
0
22
44
-1
---- correct output:
PAR
PAR
PAR
---- user output:
IMPAR
IMPAR
IMPAR
-- TEST CASE 2:
---- input:
1
33
55
777
9999
-1
---- correct output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
---- user output:
PAR
PAR
PAR
PAR
PAR
-- TEST CASE 3:
---- input:
10528
4999
123
45
6
-1
---- correct output:
PAR
IMPAR
IMPAR
IMPAR
PAR
---- user output:
IMPAR
PAR
PAR
PAR
IMPAR
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 09:41:24) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num!=-1):

	# Verifica se valor eh divisivel por 2
	if (num%2):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- EXECUTION TIME:
0.171804
-- ERROR:
  File "/home/codebench/codes/1716/2495/main.py", line 20
    num = int(input())
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 09:41:31) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num!=-1):

	# Verifica se valor eh divisivel por 2
	if (num%2):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- EXECUTION TIME:
0.134145
-- ERROR:
  File "/home/codebench/codes/1716/2495/main.py", line 20
    num = int(input())
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:42:13) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num!=-1):

	# Verifica se valor eh divisivel por 2
	if (num%2):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
   print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 17
    print(mensagem)
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:42:52) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num!=-1):

	# Verifica se valor eh divisivel por 2
	if (num%2):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
IMPAR
IMPAR
IMPAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:44:28) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num!=-1):

	# Verifica se valor eh divisivel por 2
	if (num%0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    if (num%0):
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 22:04:40) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num!=-1):

	# Verifica se valor eh divisivel por 2
	if (num%0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- EXECUTION TIME:
0.142786
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2495/main.py", line 12, in <module>
    if (num%0):
ZeroDivisionError: integer division or modulo by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:04:56) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num=-1):

	# Verifica se valor eh divisivel por 2
	if (num%0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 9
    while (num=-1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:05:12) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
	while (num=-1):

	# Verifica se valor eh divisivel por 2
	if (num%0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 9
    while (num=-1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:05:25) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num=-1):

	# Verifica se valor eh divisivel por 2
	if (num%0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 9
    while(num=-1):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:05:52) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
	while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if (num%0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 9
    while(num!=-1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:06:29) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if (num%0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    if (num%0):
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:06:47) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if (num=%0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 12
    if (num=%0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:08:03) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if (num=num%0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 12
    if (num=num%0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:12:49) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
	while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if (num%0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 9
    while(num!=-1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:13:04) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
	while(num!=-1):

	# Verifica se valor eh divisivel por 2
		if (num%0):
		mensagem = "PAR"
		else:
		mensagem = "IMPAR"
		print(mensagem)
	
	# Inputs seguintes
		num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 9
    while(num!=-1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:13:11) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
		if (num%0):
		mensagem = "PAR"
		else:
		mensagem = "IMPAR"
		print(mensagem)
	
	# Inputs seguintes
		num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 13
    mensagem = "PAR"
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:13:23) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if (num%0):
	mensagem = "PAR"
		else:
		mensagem = "IMPAR"
		print(mensagem)
	
	# Inputs seguintes
		num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 13
    mensagem = "PAR"
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:13:32) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if (num%0):
	mensagem = "PAR"
	else:
	mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 13
    mensagem = "PAR"
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:14:08) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if (num%0):
	mensagem="PAR"
	else:
	mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 13
    mensagem="PAR"
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:14:24) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if (num%0):
	mensagem = "PAR"
	else:
	mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 13
    mensagem = "PAR"
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:14:36) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if (num%0):
		mensagem = "PAR"
	else:
	mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 15
    mensagem = "IMPAR"
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:14:43) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if (num%0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    if (num%0):
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:15:00) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if (num%0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 19
    num = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:15:07) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if (num%0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    if (num%0):
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:15:48) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if (num=%0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 12
    if (num=%0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:15:58) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if (num%=0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 12
    if (num%=0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:16:05) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if (num%0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    if (num%0):
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:18:36) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num%0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    if(num%0):
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:18:53) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num%=0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 12
    if(num%=0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:19:01) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num%0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    if(num%0):
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:19:17) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num%0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    if(num%0):
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:19:34) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num(%0)):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 12
    if(num(%0)):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:19:45) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num%0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    if(num%0):
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:20:19) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num=%0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 12
    if(num=%0):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:20:27) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num=num%0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 12
    if(num=num%0):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:20:43) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num==num%0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    if(num==num%0):
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:21:02) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num==%0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 12
    if(num==%0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:21:13) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num%==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 12
    if(num%==0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:21:22) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num==%0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 12
    if(num==%0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:21:34) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num=num%0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 12
    if(num=num%0):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:21:42) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num==num%0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    if(num==num%0):
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:23:01) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num%2):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- OUTPUT:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:24:24) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num%2):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- OUTPUT:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:24:36) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num%2):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- OUTPUT:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:24:48) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num%2):
	mensagem = "PAR"
	else:
	mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 13
    mensagem = "PAR"
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:25:00) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
if(num%2):
	mensagem = "PAR"
else:
	mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 12
    if(num%2):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:25:08) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
if(num%0):
	mensagem = "PAR"
else:
	mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 12
    if(num%0):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:25:22) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num%0):
	mensagem = "PAR"
else:
	mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 13
    mensagem = "PAR"
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:25:29) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num%0):
		mensagem = "PAR"
else:
	mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    if(num%0):
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:25:48) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num%2):
		mensagem = "PAR"
	else:
	mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 15
    mensagem = "IMPAR"
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:25:56) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num%2):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 15
    mensagem = "IMPAR"
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:26:05) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num%2):
		mensagem = "PAR"
	else:
	mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 15
    mensagem = "IMPAR"
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:26:14) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num%2):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 15
    mensagem = "IMPAR"
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:26:23) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num%2):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- OUTPUT:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:26:51) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num%2):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- OUTPUT:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:27:04) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num%2):
	mensagem = "PAR"
	else:
	mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 13
    mensagem = "PAR"
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:27:14) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
if(num%2):
	mensagem = "PAR"
	else:
	mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 12
    if(num%2):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:27:22) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
	while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num%2):
	mensagem = "PAR"
	else:
	mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 9
    while(num!=-1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:27:29) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
		while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num%2):
	mensagem = "PAR"
	else:
	mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 9
    while(num!=-1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 22:27:35) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
			while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num%2):
	mensagem = "PAR"
	else:
	mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- EXECUTION TIME:
0.324551
-- ERROR:
  File "/home/codebench/codes/1716/2495/main.py", line 9
    while(num!=-1):
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:27:38) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
			while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num%2):
	mensagem = "PAR"
	else:
	mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 9
    while(num!=-1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:27:45) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
	if(num%2):
	mensagem = "PAR"
	else:
	mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 13
    mensagem = "PAR"
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:28:00) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
	while(num!=-1):

	# Verifica se valor eh divisivel por 2
		if(num%2):
		mensagem = "PAR"
		else:
		mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 9
    while(num!=-1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:28:06) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
		while(num!=-1):

	# Verifica se valor eh divisivel por 2
		if(num%2):
		mensagem = "PAR"
		else:
		mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 9
    while(num!=-1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:28:14) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
	while(num!=-1):

	# Verifica se valor eh divisivel por 2
		if(num%2):
		mensagem = "PAR"
		else:
		mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 9
    while(num!=-1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:28:19) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
		if(num%2):
		mensagem = "PAR"
		else:
		mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 13
    mensagem = "PAR"
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:28:34) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
		if(num%0):
	mensagem = "PAR"
		else:
		mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 13
    mensagem = "PAR"
                   ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:28:41) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
		if(num%0):
mensagem = "PAR"
		else:
		mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 13
    mensagem = "PAR"
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:28:48) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
		if(num%0):
		mensagem = "PAR"
		else:
		mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 13
    mensagem = "PAR"
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:28:52) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
		if(num%0):
			mensagem = "PAR"
		else:
		mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 15
    mensagem = "IMPAR"
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:28:57) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
		if(num%0):
			mensagem = "PAR"
		else:
			mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    if(num%0):
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:29:29) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
		if(num==num%0):
			mensagem = "PAR"
		else:
			mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    if(num==num%0):
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:29:43) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
		if(num=num%0):
			mensagem = "PAR"
		else:
			mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 12
    if(num=num%0):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:30:04) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
		if(num%0)
			mensagem = "PAR"
		else:
			mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 12
    if(num%0)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:30:19) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
		if(num%==0):
			mensagem = "PAR"
		else:
			mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 12
    if(num%==0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:31:08) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
	while(num!=-1):

	# Verifica se valor eh divisivel por 2
		if(num%0):
			mensagem = "PAR"
		else:
			mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 9
    while(num!=-1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:31:16) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
	num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
		if(num%0):
			mensagem = "PAR"
		else:
			mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 6
    num = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:32:59) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
		if(num%2==0):
			mensagem = "PAR"
		else:
			mensagem = "IMPAR"
print(mensagem)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))
-- ERROR:
File "XXXX", line 6
    num = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:33:26) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
		if(num%2==0):
			mensagem = "PAR"
		else:
			mensagem = "IMPAR"
		print(mensagem)
	
	# Inputs seguintes
		num = int(input("Digite um numero: "))
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 22:33:35) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while(num!=-1):

	# Verifica se valor eh divisivel por 2
		if(num%2==0):
			mensagem = "PAR"
		else:
			mensagem = "IMPAR"
		print(mensagem)
	
	# Inputs seguintes
		num = int(input("Digite um numero: "))
-- EXECUTION TIME:
0.129694
-- TEST CASE 1:
---- input:
0
22
44
-1
---- correct output:
PAR
PAR
PAR
---- user output:
PAR
PAR
PAR
-- TEST CASE 2:
---- input:
1
33
55
777
9999
-1
---- correct output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
---- user output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
-- TEST CASE 3:
---- input:
10528
4999
123
45
6
-1
---- correct output:
PAR
IMPAR
IMPAR
IMPAR
PAR
---- user output:
PAR
IMPAR
IMPAR
IMPAR
PAR
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
